# moe_control

./: AndroidManifest.xml  CMakeLists.txt  README.md  SERVER_SETUP.md  SettingsDialog.qml  logger.cpp  logger.h  main.cpp  main.qml  settings_dialog.qml  settings_manager.cpp  settings_manager.h  system_data_model.cpp  system_data_model.h  tcp_client.cpp  tcp_client.h
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
translations/: moe_control_zh_CN.qm  moe_control_zh_CN.ts
